# MIO

./: .gitignore  README.md  pyproject.toml
lab01/: lab01.ipynb  mio25_preprocessing_perceptron.ipynb
lab02/: lab02.ipynb
lab03/: lab03.ipynb
lab04/: .gitignore  lab04.ipynb
lab05/: lab05.ipynb
lab06/: lab06.ipynb  mio_25_klasteryzacja.ipynb
lab07/: genetical_algo.py
lab08/: mio25_pso.ipynb
