[project]
name = "mio"
version = "0.1.0"
description = "Solutions to Computational Intelligence Methods course assignments"
authors = [
    {name = "Jan Kwiatkowski"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
