[project]
name = "mio"
version = "0.1.0"
description = "Solutions to Computational Intelligence Methods course assignments"
authors = [
    {name = "Jan Kwiatkowski"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "notebook>=7.3.3",
]
